--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">Isaac Lautsz</div>
+            <div class="logo">Isaac Lau Tsz Hin</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
