Transform into professional CV portfolio

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div class="container">
             <div class="logo">Isaac Lau Tsz Hin</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#home">Profile</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -24,10 +26,10 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hi, I'm Isaac</h1>
-                <p class="subtitle">Developer & Creator</p>
-                <p class="description">Building amazing things with code</p>
-                <a href="#projects" class="btn btn-primary">View My Work</a>
+                <h1>Isaac Lau Tsz Hin</h1>
+                <p class="subtitle">Software Developer & Professional</p>
+                <p class="description">Experienced in designing and implementing scalable software solutions</p>
+                <a href="#contact" class="btn btn-primary">Get In Touch</a>
             </div>
         </div>
     </section>
@@ -35,18 +37,92 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>About Me</h2>
+            <h2>Professional Summary</h2>
             <p>
-                I'm a passionate developer interested in building innovative solutions.
-                I love working with modern technologies and constantly learning new skills.
+                Results-driven software developer with a strong foundation in full-stack development and problem-solving. Committed to writing clean, efficient code and delivering high-quality solutions that meet business objectives. Proven ability to work collaboratively in team environments and continuously adapt to new technologies.
             </p>
-            <div class="skills">
-                <h3>Skills</h3>
-                <div class="skill-tags">
-                    <span class="tag">Web Development</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Python</span>
-                    <span class="tag">Problem Solving</span>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <h2>Professional Experience</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date">Present</div>
+                    <h3>Position Title</h3>
+                    <p class="company">Company Name</p>
+                    <ul class="achievements">
+                        <li>Developed and maintained web applications using modern frameworks</li>
+                        <li>Collaborated with cross-functional teams to deliver projects on schedule</li>
+                        <li>Optimized code performance and improved system reliability</li>
+                    </ul>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">20XX - Present</div>
+                    <h3>Previous Position</h3>
+                    <p class="company">Previous Company</p>
+                    <ul class="achievements">
+                        <li>Implemented new features and bug fixes</li>
+                        <li>Mentored junior developers and conducted code reviews</li>
+                        <li>Participated in architectural planning and system design</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education" class="education">
+        <div class="container">
+            <h2>Education</h2>
+            <div class="education-items">
+                <div class="education-item">
+                    <h3>Degree Name</h3>
+                    <p class="institution">University Name</p>
+                    <p class="graduation">Graduation: Year</p>
+                </div>
+                <div class="education-item">
+                    <h3>Relevant Course or Certification</h3>
+                    <p class="institution">Institution / Platform</p>
+                    <p class="graduation">Completed: Year</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="skills-section">
+        <div class="container">
+            <h2>Technical Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>Programming Languages</h3>
+                    <div class="skill-tags">
+                        <span class="tag">Python</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">HTML/CSS</span>
+                        <span class="tag">SQL</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Frameworks & Tools</h3>
+                    <div class="skill-tags">
+                        <span class="tag">React</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">Git</span>
+                        <span class="tag">REST APIs</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Other Competencies</h3>
+                    <div class="skill-tags">
+                        <span class="tag">Problem Solving</span>
+                        <span class="tag">Team Collaboration</span>
+                        <span class="tag">Communication</span>
+                        <span class="tag">Project Management</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,10 +155,10 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Get In Touch</h2>
-            <p>Feel free to reach out to me for opportunities or just a friendly hello!</p>
+            <h2>Contact Information</h2>
+            <p>I welcome professional inquiries and opportunities to discuss how I can contribute to your organization.</p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="btn btn-primary">Email Me</a>
+                <a href="mailto:your.email@example.com" class="btn btn-primary">Email</a>
                 <a href="https://github.com" target="_blank" class="social-link">GitHub</a>
                 <a href="https://linkedin.com" target="_blank" class="social-link">LinkedIn</a>
             </div>
