Transform into professional CV portfolio

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Isaac Lau Tsz Hin</h1>
-                <p class="subtitle">Software Developer & Professional</p>
-                <p class="description">Experienced in designing and implementing scalable software solutions</p>
+                <!-- 
+                <p class="subtitle">Technology Enthusiast</p>
+                -->
+                <p class="subtitle">Student in the Hong Kong University of Science and Technology</p>
+                <p class="description">Dual Degree Program in Technology and Management - Class of 2029</p>
+                <p class="description">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</p>
+                <p class="description">BBA in Business Administration (Undeclared Major)</p>
                 <a href="#contact" class="btn btn-primary">Get In Touch</a>
             </div>
         </div>
@@ -156,11 +161,11 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contact Information</h2>
-            <p>I welcome professional inquiries and opportunities to discuss how I can contribute to your organization.</p>
+            <p>Feel free to reach out to me for any opportunities on enquiries! </p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="btn btn-primary">Email</a>
-                <a href="https://github.com" target="_blank" class="social-link">GitHub</a>
-                <a href="https://linkedin.com" target="_blank" class="social-link">LinkedIn</a>
+                <a href="mailto:isaactszhinlau@gmail.com" class="btn btn-primary">Email</a>
+                <a href="https://github.com/isaaclau128" target="_blank" class="social-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank" class="social-link">LinkedIn</a>
             </div>
         </div>
     </section>
@@ -168,7 +173,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Isaac Lautsz. All rights reserved.</p>
+            <p>&copy; isaactszhinlau@gmail.com | https://github.com/isaaclau128</p>
         </div>
     </footer>
 </body>
