--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
     <!-- Experience Section -->
     <section id="experience" class="experience">
         <div class="container">
-            <h2>Professional Experience</h2>
+            <h2>Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-date">Present</div>
-                    <h3>Position Title</h3>
-                    <p class="company">Company Name</p>
-                    <ul class="achievements">
+                    <h3>Student at the Hong Kong University of Science and Technology</h3>
+                    <p class="company">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts and BBA in Business Administration (Undeclared Major)</p>
+                    <ul class="achievements"> 
+                <!-- add course history here -->
                         <li>Developed and maintained web applications using modern frameworks</li>
                         <li>Collaborated with cross-functional teams to deliver projects on schedule</li>
                         <li>Optimized code performance and improved system reliability</li>
