--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                     <h3>Student at the Hong Kong University of Science and Technology</h3>
                     <p class="company">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts and BBA in Business Administration (Undeclared Major)</p>
                     <ul class="achievements"> 
-                <!-- add course history here -->
                         <li>Developed and maintained web applications using modern frameworks</li>
                         <li>Collaborated with cross-functional teams to deliver projects on schedule</li>
                         <li>Optimized code performance and improved system reliability</li>
@@ -85,14 +84,14 @@
             <h2>Education</h2>
             <div class="education-items">
                 <div class="education-item">
-                    <h3>Degree Name</h3>
-                    <p class="institution">University Name</p>
-                    <p class="graduation">Graduation: Year</p>
+                    <h3>BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</h3>
+                    <p class="institution">Hong Kong University of Science and Technology</p>
+                    <p class="graduation">Expected Graduation Year: 2029</p>
                 </div>
                 <div class="education-item">
-                    <h3>Relevant Course or Certification</h3>
-                    <p class="institution">Institution / Platform</p>
-                    <p class="graduation">Completed: Year</p>
+                    <h3>Artificial Intelligence and Machine Learning - Theory and Practice | Computational Psychology</h3>
+                    <p class="institution">University of Oxford - Lady Margaret Hall Summer Programmes</p>
+                    <p class="graduation">Completed in 2025 with grade A | A-</p>
                 </div>
             </div>
         </div>
@@ -174,7 +173,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; isaactszhinlau@gmail.com | https://github.com/isaaclau128</p>
+            <p> isaactszhinlau@gmail.com | https://github.com/isaaclau128</p>
         </div>
     </footer>
 </body>
