--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <h2>Professional Summary</h2>
             <p>
-                Results-driven software developer with a strong foundation in full-stack development and problem-solving. Committed to writing clean, efficient code and delivering high-quality solutions that meet business objectives. Proven ability to work collaboratively in team environments and continuously adapt to new technologies.
+                Always intrigued by new technology, Isaac is eager to adapt and combine theory and knowledge into the evolving world. He possesses strong critical thinking and problem-solving skills, enabling him to tackle complex problems. With solid experience in group work, Isaac is a team player and often takes on the responsibilities of a leadership role.
             </p>
         </div>
     </section>
@@ -106,8 +106,7 @@
                     <h3>Programming Languages</h3>
                     <div class="skill-tags">
                         <span class="tag">Python</span>
-                        <span class="tag">JavaScript</span>
-                        <span class="tag">HTML/CSS</span>
+                        <span class="tag">C++</span>
                         <span class="tag">SQL</span>
                     </div>
                 </div>
@@ -139,8 +138,8 @@
             <h2>Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Project 1</h3>
-                    <p>A brief description of your first project goes here.</p>
+                    <h3>The Pokédex Project</h3>
+                    <p>Utilizing computer vision and machine learning to identify and classify Pokémon species, thus recreating the experience of a Pokédex.</p>
                     <a href="#" class="btn btn-secondary">Learn More</a>
                 </div>
                 <div class="project-card">
