Add course history page and link from index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <p class="institution">University of Oxford - Lady Margaret Hall Summer Programmes</p>
                     <p class="graduation">Completed in 2025 with grade A | A-</p>
                 </div>
+                <a href="course-history.html">Course History</a>
             </div>
         </div>
     </section>
