Style course history link as button and add hover effects

--- a/course-history.html
+++ b/course-history.html
@@ -45,7 +45,7 @@
     <h1>Course History</h1>
     
     <div class="semester">
-        <h2>Fall 2023</h2>
+        <h2>Fall 2025-2026</h2>
         <div class="course">
             <span class="course-name">Course Name 1</span>
         </div>
@@ -55,7 +55,37 @@
     </div>
 
     <div class="semester">
-        <h2>Spring 2024</h2>
+        <h2>Summer 2024-2025</h2>
+        <div class="course">
+            <span class="course-name">Course Name 3</span>
+        </div>
+        <div class="course">
+            <span class="course-name">Course Name 4</span>
+        </div>
+    </div>
+
+    <div class="semester">
+        <h2>Spring 2024-2025</h2>
+        <div class="course">
+            <span class="course-name">Course Name 3</span>
+        </div>
+        <div class="course">
+            <span class="course-name">Course Name 4</span>
+        </div>
+    </div>
+
+    <div class="semester">
+        <h2>Winter 2024-2025</h2>
+        <div class="course">
+            <span class="course-name">Course Name 3</span>
+        </div>
+        <div class="course">
+            <span class="course-name">Course Name 4</span>
+        </div>
+    </div>
+
+    <div class="semester">
+        <h2>Fall 2024-2025</h2>
         <div class="course">
             <span class="course-name">Course Name 3</span>
         </div>
