--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                     <p class="institution">University of Oxford - Lady Margaret Hall Summer Programmes</p>
                     <p class="graduation">Completed in 2025 with grade A | A-</p>
                 </div>
-                <a href="course-history.html">Course History</a>
+            </div>
+            <div class="course-history-link">
+                <a href="course-history.html" class="btn-secondary">View Full Course History</a>
             </div>
         </div>
     </section>
