--- a/course-history.html
+++ b/course-history.html
@@ -87,11 +87,45 @@
     <div class="semester">
         <h2>Fall 2024-2025</h2>
         <div class="course">
-            <span class="course-name">Course Name 3</span>
+            <span class="course-name">COMP1021 - Introduction to Computer Science (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">Course Name 4</span>
+            <span class="course-name">ENGG1400 - Designing Your Life for Engineering Students (1)</span>
         </div>
+        <div class="course">
+            <span class="course-name">HUMA2101 - Enjoyment of Western Opera (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">LANG1407 - Academic English for Engineering Studies (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">PHYS1112 - General Physics I with Calculus (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">HMAW1905B - Behavioral Foundations of University Education: Habts, Mindsets, and Wellness (1)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">LEGL1100 - Legal Education (Basic Law, National Security Law and Safeguarding National Security Ordinance) (0) (0)</span>
+        </div>
+
+        <h3 style="margin-top: 1.5rem; margin-bottom: 0.5rem;">Transferred Credits from IBDP results</h3>
+        
+        <div class="course">
+            <span class="course-name">CHEM1101 - General Chemistry A: Reactions, Thermodynamics, and Reaction Kinetics (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">CHEM1051 - Laboratory for General Chemistry A (1)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">COREBROAD - Common Core Course in Broadening Group (6)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">MATH1013 - Calculus IB (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">OTHRFREE - Free Credits (9)</span>
+        </div>
+        
     </div>
 
 </body>
