Style course history link as button and add hover effects

--- a/course-history.html
+++ b/course-history.html
@@ -47,40 +47,80 @@
     <div class="semester">
         <h2>Fall 2025-2026</h2>
         <div class="course">
-            <span class="course-name">Course Name 1</span>
+            <span class="course-name">ISOM2500 - Business Statistics (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">Course Name 2</span>
+            <span class="course-name">ISOM2700 - Operations Management (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">MARK2120 - Marketing Management (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">MATH2111 - Matrix Algebra and Applications (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">ECON2103 - Principles of Microeconomics (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">PHYS1114 - General Physics II (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">COMP2011 - Programming with C++ (4)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">EMIA2010B - Corss-disciplinary Seminar: Digital Media and Creative Arts (0)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">ENGG2010 - Engineering Seminar Series (0)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">TEMG1010 - T&M Professional Activities (0)</span>
         </div>
     </div>
 
     <div class="semester">
         <h2>Summer 2024-2025</h2>
         <div class="course">
-            <span class="course-name">Course Name 3</span>
+            <span class="course-name">ACCT2010 - Principles of Accounting I (3)</span>
+        </div>
+        <h3 style="margin-top: 1.5rem; margin-bottom: 0.5rem;">Transferred Credits from University of Oxford - Lady Margaret Hall Summer Programmes</h3>
+        <div class="course">
+            <span class="course-name">COMPA&T - Computer Science Track Course (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">Course Name 4</span>
+            <span class="course-name">ELEC3810 - Data Science for Neural Engineering (3)</span>
         </div>
     </div>
 
     <div class="semester">
         <h2>Spring 2024-2025</h2>
         <div class="course">
-            <span class="course-name">Course Name 3</span>
+            <span class="course-name">CIVL1100 - Discovering Civil and Environmental Engineering (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">Course Name 4</span>
+            <span class="course-name">ELEC1100 - Introduction to Electro-Robot Design (4)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">HUMA2104 - Music Theory I: Introduction to Tonal Music (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">MATH1014 - Calculus II (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">TEMG3950 - T&M Case Analysis and Product Innovation (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">HMAW1905B - Behavioral Foundations of University Education: Habts, Mindsets, and Wellness (2)</span>
         </div>
     </div>
 
     <div class="semester">
         <h2>Winter 2024-2025</h2>
         <div class="course">
-            <span class="course-name">Course Name 3</span>
-        </div>
-        <div class="course">
-            <span class="course-name">Course Name 4</span>
+            <span class="course-name">ISOM1090 - Social Media: Collective Intelligence & Creativity (3)</span>
         </div>
     </div>
 
@@ -105,7 +145,7 @@
             <span class="course-name">HMAW1905B - Behavioral Foundations of University Education: Habts, Mindsets, and Wellness (1)</span>
         </div>
         <div class="course">
-            <span class="course-name">LEGL1100 - Legal Education (Basic Law, National Security Law and Safeguarding National Security Ordinance) (0) (0)</span>
+            <span class="course-name">LEGL1100 - Legal Education (Basic Law, National Security Law and Safeguarding National Security Ordinance) (0)</span>
         </div>
 
         <h3 style="margin-top: 1.5rem; margin-bottom: 0.5rem;">Transferred Credits from IBDP results</h3>
