--- a/course-history.html
+++ b/course-history.html
@@ -43,6 +43,53 @@
 </head>
 <body>
     <h1>Course History</h1>
+
+<!--
+    <div class="semester">
+        <h2>Spring 2025-2026</h2>
+        <div class="course">
+            <span class="course-name">ISOM2500 - Business Statistics (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">ISOM2700 - Operations Management (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">MARK2120 - Marketing Management (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">MATH2111 - Matrix Algebra and Applications (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">ECON2103 - Principles of Microeconomics (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">PHYS1114 - General Physics II (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">COMP2011 - Programming with C++ (4)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">EMIA2010B - Corss-disciplinary Seminar: Digital Media and Creative Arts (0)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">ENGG2010 - Engineering Seminar Series (0)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">TEMG1010 - T&M Professional Activities (0)</span>
+        </div>
+    </div>
+
+    -->
+
+    <div class="semester">
+        <h2>Winter 2025-2026 (Current Semester)</h2>
+        <div class="course">
+            <span class="course-name">TEMG4970F - T&M IBPC in Saudi Arabia (3)</span>
+        </div>
+    </div>
     
     <div class="semester">
         <h2>Fall 2025-2026</h2>
