Added Contact Info on homepage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 <p class="description">Dual Degree Program in Technology and Management - Class of 2029</p>
                 <p class="description">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</p>
                 <p class="description">BBA in Business Administration (Undeclared Major)</p>
-                <a href="#contact" class="btn btn-primary">Get In Touch</a>
+                <!-- <a href="#contact" class="btn btn-primary">Get In Touch</a> -->
+                <div class="container">
+                    <p> isaactszhinlau@gmail.com | https://github.com/isaaclau128</p>
+                </div>
             </div>
         </div>
     </section>
