--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <p class="description">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</p>
                 <p class="description">BBA in Business Administration (Undeclared Major)</p>
                 <!-- <a href="#contact" class="btn btn-primary">Get In Touch</a> -->
-                <div class="container">
-                    <p> isaactszhinlau@gmail.com | https://github.com/isaaclau128</p>
+                <div class="contact-info">
+                    <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a></p>
                 </div>
             </div>
         </div>
@@ -178,7 +178,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p> isaactszhinlau@gmail.com | https://github.com/isaaclau128</p>
+            <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a></p>
         </div>
     </footer>
 </body>
