--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                     <a href="#" class="btn btn-secondary">Learn More</a>
                 </div>
                 <div class="project-card">
-                    <h3>Project 2</h3>
-                    <p>A brief description of your second project goes here.</p>
+                    <h3>HKUST Waitlist Reminder</h3>
+                    <p>Program that sends notifications to students on the waitlist for courses at HKUST.</p>
                     <a href="#" class="btn btn-secondary">Learn More</a>
                 </div>
                 <div class="project-card">
