--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <h2>Education</h2>
             <div class="education-items">
                 <div class="education-item">
-                    <h3>BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</h3>
-                    <p class="institution">Hong Kong University of Science and Technology</p>
+                    <h3>BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts and BBA (Undeclared Major)</h3>
+                    <p class="institution">The Hong Kong University of Science and Technology</p>
                     <p class="graduation">Expected Graduation Year: 2029</p>
                 </div>
                 <div class="education-item">
