--- a/course-history.html
+++ b/course-history.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">Isaac Lau Tsz Hin</div>
+            <a class="logo" href="index.html#home">Isaac Lau Tsz Hin</a>
             <ul class="nav-links">
                 <li><a href="index.html#home">Profile</a></li>
                 <li><a href="index.html#experience">Experience</a></li>
