--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">Isaac Lau Tsz Hin</div>
+            <a class="logo" href="#home">Isaac Lau Tsz Hin</a>
             <ul class="nav-links">
                 <li><a href="#home">Profile</a></li>
                 <li><a href="#experience">Experience</a></li>
