Update course history layout and navbar logo styling

--- a/course-history.html
+++ b/course-history.html
@@ -22,7 +22,8 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+
+    <!-- Hero Section 
     <section class="hero" id="courses-hero">
         <div class="container">
             <div class="hero-content">
@@ -35,6 +36,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <section id="courses" class="course-history">
         <div class="container">
