--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="education-item">
                     <h3>BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts and BBA (Undeclared Major)</h3>
                     <p class="institution">The Hong Kong University of Science and Technology</p>
-                    <p class="graduation">Expected Graduation Year: 2029</p>
+                    <p class="graduation">Expected Year of Graduation: 2029</p>
                 </div>
                 <div class="education-item">
                     <h3>Artificial Intelligence and Machine Learning - Theory and Practice | Computational Psychology</h3>
