--- a/course-history.html
+++ b/course-history.html
@@ -41,6 +41,7 @@
     <section id="courses" class="course-history">
         <div class="container">
             <h2>Course History</h2>
+            <p class="subtitle">Number of credits for each courses is indicated in parentheses.</p>
 
 <!--
     <div class="semester">
@@ -92,6 +93,12 @@
             <div class="semester">
                 <h3>Fall 2025-2026</h3>
                 <div class="course">
+                    <span class="course-name">COMP2011 - Programming with C++ (4)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">ECON2103 - Principles of Microeconomics (3)</span>
+                </div>
+                <div class="course">
                     <span class="course-name">ISOM2500 - Business Statistics (3)</span>
                 </div>
                 <div class="course">
@@ -104,13 +111,7 @@
                     <span class="course-name">MATH2111 - Matrix Algebra and Applications (3)</span>
                 </div>
                 <div class="course">
-                    <span class="course-name">ECON2103 - Principles of Microeconomics (3)</span>
-                </div>
-                <div class="course">
                     <span class="course-name">PHYS1114 - General Physics II (3)</span>
-                </div>
-                <div class="course">
-                    <span class="course-name">COMP2011 - Programming with C++ (4)</span>
                 </div>
                 <div class="course">
                     <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
