add link to waitlist reminder

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="project-card">
                     <h3>HKUST Waitlist Reminder</h3>
                     <p>Program that sends notifications to students on the waitlist for courses at HKUST.</p>
-                    <a href="#" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/isaaclau128/HKUST-Waitlist-Reminder" target="_blank" class="btn btn-secondary">Learn More</a>
                 </div>
                 <div class="project-card">
                     <h3>Project 3</h3>
