Add LinkedIn link to header and footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p class="description">BBA in Business Administration (Undeclared Major)</p>
                 <!-- <a href="#contact" class="btn btn-primary">Get In Touch</a> -->
                 <div class="contact-info">
-                    <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a></p>
+                    <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a> | <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank">https://www.linkedin.com/in/lautszhinisaac</a></p>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contact Information</h2>
-            <p>Feel free to reach out to me for any opportunities on enquiries! </p>
+            <p>Feel free to reach out to me for any opportunities or enquiries! </p>
             <div class="contact-links">
                 <a href="mailto:isaactszhinlau@gmail.com" class="btn btn-primary">Email</a>
                 <a href="https://github.com/isaaclau128" target="_blank" class="social-link">GitHub</a>
@@ -178,7 +178,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a></p>
+            <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a> | <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank">https://www.linkedin.com/in/lautszhinisaac</a></p>
         </div>
     </footer>
 </body>
