Add Pokedex link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- 
                 <p class="subtitle">Technology Enthusiast</p>
                 -->
-                <p class="subtitle">Student in the Hong Kong University of Science and Technology</p>
+                <p class="subtitle">Student at the Hong Kong University of Science and Technology</p>
                 <p class="description">Dual Degree Program in Technology and Management - Class of 2029</p>
                 <p class="description">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</p>
                 <p class="description">BBA in Business Administration (Undeclared Major)</p>
@@ -146,7 +146,7 @@
                 <div class="project-card">
                     <h3>The Pokédex Project</h3>
                     <p>Utilizing computer vision and machine learning to identify and classify Pokémon species, thus recreating the experience of a Pokédex.</p>
-                    <a href="#" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/isaaclau128/The-Pokedex-Project" target="_blank" class="btn btn-secondary">Learn More</a>
                 </div>
                 <div class="project-card">
                     <h3>HKUST Waitlist Reminder</h3>
