--- a/course-history.html
+++ b/course-history.html
@@ -41,37 +41,37 @@
     <section id="courses" class="course-history">
         <div class="container">
             <h2>Course History</h2>
-            <p class="subtitle">Number of credits for each courses is indicated in parentheses.</p>
+            <p class="description">Number of credits for each course is indicated in parentheses.</p>
 
 <!--
     <div class="semester">
         <h2>Spring 2025-2026</h2>
         <div class="course">
-            <span class="course-name">ISOM2500 - Business Statistics (3)</span>
+            <span class="course-name">COMP2012 - Object Oriented Programming (4)</span>
         </div>
         <div class="course">
-            <span class="course-name">ISOM2700 - Operations Management (3)</span>
+            <span class="course-name">ELEC2400 - Electronic Circuits (4)</span>
         </div>
         <div class="course">
-            <span class="course-name">MARK2120 - Marketing Management (3)</span>
+            <span class="course-name">FINA2303 - Financial Management (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">MATH2111 - Matrix Algebra and Applications (3)</span>
+            <span class="course-name">HUMA1157 - Introduction to Acting and Public Speaking (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">ECON2103 - Principles of Microeconomics (3)</span>
+            <span class="course-name">ISOM2600 - Introduction to Business Analytics (1)</span>
         </div>
         <div class="course">
-            <span class="course-name">PHYS1114 - General Physics II (3)</span>
+            <span class="course-name">LANG2063 - Writing for Workplace Success (3)</span>
         </div>
         <div class="course">
-            <span class="course-name">COMP2011 - Programming with C++ (4)</span>
+            <span class="course-name">MGMT2110 - Organizational Behavior (3)</span>
+        </div>
+        <div class="course">
+            <span class="course-name">CPEG1971 - Industrial Training (0)</span>
         </div>
         <div class="course">
             <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">EMIA2010B - Corss-disciplinary Seminar: Digital Media and Creative Arts (0)</span>
         </div>
         <div class="course">
             <span class="course-name">ENGG2010 - Engineering Seminar Series (0)</span>
