--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaac Lau Tsz Hin - Personal Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -36,7 +37,11 @@
                 <p class="description">BBA in Business Administration (Undeclared Major)</p>
                 <!-- <a href="#contact" class="btn btn-primary">Get In Touch</a> -->
                 <div class="contact-info">
-                    <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a> | <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank">https://www.linkedin.com/in/lautszhinisaac</a></p>
+                    <p>
+                        <a href="mailto:isaactszhinlau@gmail.com" target="_blank"><i class="fas fa-envelope"></i> isaactszhinlau@gmail.com</a> | 
+                        <a href="https://github.com/isaaclau128" target="_blank"><i class="fab fa-github"></i> GitHub</a> | 
+                        <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -153,11 +158,14 @@
                     <p>Program that sends notifications to students on the waitlist for courses at HKUST.</p>
                     <a href="https://github.com/isaaclau128/HKUST-Waitlist-Reminder" target="_blank" class="btn btn-secondary">Learn More</a>
                 </div>
+
+                <!--
                 <div class="project-card">
                     <h3>Project 3</h3>
                     <p>A brief description of your third project goes here.</p>
                     <a href="#" class="btn btn-secondary">Learn More</a>
                 </div>
+                -->
             </div>
         </div>
     </section>
