--- a/index.html
+++ b/index.html
@@ -186,7 +186,11 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>isaactszhinlau@gmail.com | <a href="https://github.com/isaaclau128" target="_blank">https://github.com/isaaclau128</a> | <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank">https://www.linkedin.com/in/lautszhinisaac</a></p>
+            <p>
+                <a href="mailto:isaactszhinlau@gmail.com" target="_blank"><i class="fas fa-envelope"></i> isaactszhinlau@gmail.com</a> | 
+                <a href="https://github.com/isaaclau128" target="_blank"><i class="fab fa-github"></i> https://github.com/isaaclau128</a> | 
+                <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank"><i class="fab fa-linkedin"></i> https://www.linkedin.com/in/lautszhinisaac</a>
+            </p>
         </div>
     </footer>
 </body>
