--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Isaac Lau Tsz Hin</h1>
-                <!-- 
-                <p class="subtitle">Technology Enthusiast</p>
-                -->
-                <p class="subtitle">Student at the Hong Kong University of Science and Technology</p>
-                <p class="description">Dual Degree Program in Technology and Management - Class of 2029</p>
-                <p class="description">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</p>
-                <p class="description">BBA in Business Administration (Undeclared Major)</p>
-                <!-- <a href="#contact" class="btn btn-primary">Get In Touch</a> -->
+                <div class="hero-wrapper">
+                    <div class="hero-text">
+                        <h1>Hi, I'm Isaac.</h1>
+                        <!-- 
+                        <p class="subtitle">Technology Enthusiast</p>
+                        
+                        <p class="subtitle">Student at the Hong Kong University of Science and Technology</p>
+                        <p class="description">Dual Degree Program in Technology and Management - Class of 2029</p>
+                        <p class="description">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts</p>
+                        <p class="description">BBA in Business Administration (Undeclared Major)</p>
+                        -->
+                        <!-- <a href="#contact" class="btn btn-primary">Get In Touch</a> -->
+                    </div>
+                    <div class="hero-photo">
+                        <img src="profile.jpg" alt="Isaac Lau Tsz Hin">
+                    </div>
+                </div>
                 <div class="contact-info">
                     <p>
                         <a href="mailto:isaactszhinlau@gmail.com" target="_blank"><i class="fas fa-envelope"></i> isaactszhinlau@gmail.com</a> | 
@@ -131,12 +139,13 @@
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Other Competencies</h3>
+                    <h3>Software</h3>
                     <div class="skill-tags">
-                        <span class="tag">Problem Solving</span>
-                        <span class="tag">Team Collaboration</span>
-                        <span class="tag">Communication</span>
-                        <span class="tag">Project Management</span>
+                        <span class="tag">Autodesk Fusion 360/AutoCAD</span>
+                        <span class="tag">Google SketchUp</span>
+                        <span class="tag">Figma</span>
+                        <span class="tag">MuseScore 4</span>
+                        <span class="tag">GarageBand</span>
                     </div>
                 </div>
             </div>
