--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>Professional Summary</h2>
+            <h2>About Me</h2>
             <p>
                 Always intrigued by new technology, Isaac is eager to adapt and combine theory and knowledge into the evolving world. He possesses strong critical thinking and problem-solving skills, enabling him to tackle complex problems. With solid experience in group work, Isaac is a team player and often takes on the responsibilities of a leadership role.
             </p>
