--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                     <h3>Student at the Hong Kong University of Science and Technology</h3>
                     <p class="company">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts and BBA in Business Administration (Undeclared Major)</p>
                     <ul class="achievements"> 
-                        <li>Developed and maintained web applications using modern frameworks</li>
-                        <li>Collaborated with cross-functional teams to deliver projects on schedule</li>
-                        <li>Optimized code performance and improved system reliability</li>
+                        <li>Deputy Head Student Ambassador</li>
+                        
                     </ul>
                 </div>
+                <!---
                 <div class="timeline-item">
                     <div class="timeline-date">20XX - Present</div>
                     <h3>Previous Position</h3>
@@ -98,6 +98,7 @@
                         <li>Participated in architectural planning and system design</li>
                     </ul>
                 </div>
+            -->
             </div>
         </div>
     </section>
