--- a/index.html
+++ b/index.html
@@ -139,12 +139,17 @@
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Frameworks & Tools</h3>
+                    <h3>Tools</h3>
                     <div class="skill-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Node.js</span>
-                        <span class="tag">Git</span>
-                        <span class="tag">REST APIs</span>
+                        <span class="tag">CNN</span>
+                        <span class="tag">RNN</span>
+                        <span class="tag">NumPy</span>
+                        <span class="tag">Pandas</span>
+                        <span class="tag">MatPlotLib</span>
+                        <span class="tag">Seaborn</span>
+                        <span class="tag">Linear Regression</span>
+                        <span class="tag">Logistic Regression</span>
+                        <span class="tag">Gradient Descent/span>
                     </div>
                 </div>
                 <div class="skill-category">
